fixed timming issue. Updated ccm.

--- a/KV260/prebuilt/hardware/kv260_som/KV260_kv260_som.ltx
+++ b/KV260/prebuilt/hardware/kv260_som/KV260_kv260_som.ltx
@@ -32,13 +32,19 @@
                                 "direction": "IN",
                                 "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 7,
+                                "rightIndex": 9,
                                 "portIndex": 0,
                                 "nets": [
                                     {
                                         "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_red",
                                         "isBus": true,
                                         "subnets": [
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_red[9]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_red[8]"
+                                            },
                                             {
                                                 "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_red[7]"
                                             },
@@ -74,13 +80,19 @@
                                 "direction": "IN",
                                 "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 7,
+                                "rightIndex": 9,
                                 "portIndex": 1,
                                 "nets": [
                                     {
                                         "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_gre",
                                         "isBus": true,
                                         "subnets": [
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_gre[9]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_gre[8]"
+                                            },
                                             {
                                                 "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_gre[7]"
                                             },
@@ -116,13 +128,19 @@
                                 "direction": "IN",
                                 "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 7,
+                                "rightIndex": 9,
                                 "portIndex": 2,
                                 "nets": [
                                     {
                                         "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_blu",
                                         "isBus": true,
                                         "subnets": [
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_blu[9]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_blu[8]"
+                                            },
                                             {
                                                 "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/vfp_0_rgb_fr_plw_blu[7]"
                                             },
