--- a/KV260/prebuilt/hardware/kv260_som/KV260_kv260_som.ltx
+++ b/KV260/prebuilt/hardware/kv260_som/KV260_kv260_som.ltx
@@ -501,7 +501,7 @@
                     },
                     {
                         "type": "ILA_V3",
-                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/ila_1",
+                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/ila_1",
                         "spec": "labtools_ila_v6",
                         "ipName": "ila",
                         "core_location": {
@@ -509,7 +509,7 @@
                             "slave_index": 1,
                             "bscan_switch_index": 0
                         },
-                        "uuid": "F1637C3E6A0358AE96F9A5263DF64743",
+                        "uuid": "6C19FE8610E35323BC39EA4B2472B767",
                         "pins": [
                             {
                                 "name": "probe0",
@@ -522,7 +522,7 @@
                                 "portIndex": 0,
                                 "nets": [
                                     {
-                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_active_video_out",
+                                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TREADY",
                                         "isBus": false
                                     }
                                 ]
@@ -532,14 +532,64 @@
                                 "id": 12,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": false,
+                                "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 0,
+                                "rightIndex": 15,
                                 "portIndex": 1,
                                 "nets": [
                                     {
-                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_hblank_out",
-                                        "isBus": false
+                                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[15]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[14]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[13]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[12]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[11]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[10]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[9]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[8]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[7]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[6]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[5]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[4]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[3]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[2]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[1]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDATA[0]"
+                                            }
+                                        ]
                                     }
                                 ]
                             },
@@ -548,14 +598,22 @@
                                 "id": 13,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
-                                "isVector": false,
+                                "isVector": true,
                                 "leftIndex": 0,
-                                "rightIndex": 0,
+                                "rightIndex": 1,
                                 "portIndex": 2,
                                 "nets": [
                                     {
-                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_hsync_out",
-                                        "isBus": false
+                                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/probe2",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/probe2[1]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/probe2[0]"
+                                            }
+                                        ]
                                     }
                                 ]
                             },
@@ -570,7 +628,7 @@
                                 "portIndex": 3,
                                 "nets": [
                                     {
-                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_vblank_out",
+                                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TVALID",
                                         "isBus": false
                                     }
                                 ]
@@ -586,7 +644,7 @@
                                 "portIndex": 4,
                                 "nets": [
                                     {
-                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_vsync_out",
+                                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TLAST",
                                         "isBus": false
                                     }
                                 ]
@@ -602,7 +660,7 @@
                                 "portIndex": 5,
                                 "nets": [
                                     {
-                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_axi4s_vid_out_0_vid_active_video",
+                                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TUSER",
                                         "isBus": false
                                     }
                                 ]
@@ -610,6 +668,204 @@
                             {
                                 "name": "probe6",
                                 "id": 17,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": true,
+                                "leftIndex": 0,
+                                "rightIndex": 1,
+                                "portIndex": 6,
+                                "nets": [
+                                    {
+                                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/probe6",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/probe6[1]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/probe6[0]"
+                                            }
+                                        ]
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe7",
+                                "id": 18,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": true,
+                                "leftIndex": 0,
+                                "rightIndex": 9,
+                                "portIndex": 7,
+                                "nets": [
+                                    {
+                                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST",
+                                        "isBus": true,
+                                        "subnets": [
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[9]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[8]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[7]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[6]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[5]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[4]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[3]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[2]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[1]"
+                                            },
+                                            {
+                                                "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/mipi_csi2_rx_subsyst_0_video_out_TDEST[0]"
+                                            }
+                                        ]
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe8",
+                                "id": 19,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 8,
+                                "nets": [
+                                    {
+                                        "name": "kv260_video_i/PS_VIDEO/RX_VIDEO/probe8",
+                                        "isBus": false
+                                    }
+                                ]
+                            }
+                        ]
+                    },
+                    {
+                        "type": "ILA_V3",
+                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/ila_1",
+                        "spec": "labtools_ila_v6",
+                        "ipName": "ila",
+                        "core_location": {
+                            "user_chain": 1,
+                            "slave_index": 2,
+                            "bscan_switch_index": 0
+                        },
+                        "uuid": "F1637C3E6A0358AE96F9A5263DF64743",
+                        "pins": [
+                            {
+                                "name": "probe0",
+                                "id": 20,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 0,
+                                "nets": [
+                                    {
+                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_active_video_out",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe1",
+                                "id": 21,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 1,
+                                "nets": [
+                                    {
+                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_hblank_out",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe2",
+                                "id": 22,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 2,
+                                "nets": [
+                                    {
+                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_hsync_out",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe3",
+                                "id": 23,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 3,
+                                "nets": [
+                                    {
+                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_vblank_out",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe4",
+                                "id": 24,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 4,
+                                "nets": [
+                                    {
+                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_tc_0_vsync_out",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe5",
+                                "id": 25,
+                                "type": "DATA_TRIGGER",
+                                "direction": "IN",
+                                "isVector": false,
+                                "leftIndex": 0,
+                                "rightIndex": 0,
+                                "portIndex": 5,
+                                "nets": [
+                                    {
+                                        "name": "kv260_video_i/PS_VIDEO/VIDEO_PIPELINE/v_axi4s_vid_out_0_vid_active_video",
+                                        "isBus": false
+                                    }
+                                ]
+                            },
+                            {
+                                "name": "probe6",
+                                "id": 26,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": true,
@@ -735,7 +991,7 @@
                             },
                             {
                                 "name": "probe7",
-                                "id": 18,
+                                "id": 27,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
@@ -751,7 +1007,7 @@
                             },
                             {
                                 "name": "probe8",
-                                "id": 19,
+                                "id": 28,
                                 "type": "DATA_TRIGGER",
                                 "direction": "IN",
                                 "isVector": false,
